--- a/logistics.html
+++ b/logistics.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="images/logo.svg" alt="Mkulima Connect Logo">
+            <img src="images/Mkulima Connect Logo.png" alt="Mkulima Connect Logo">
             <h1>Logistics Center</h1>
         </div>
         <nav class="main-nav">
