--- a/offline.html
+++ b/offline.html
@@ -23,7 +23,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="images/logo.svg" alt="Mkulima Connect Logo">
+            <img src="images/Mkulima Connect Logo.png" alt="Mkulima Connect Logo">
             <h1>Offline Mode</h1>
         </div>
         <nav class="main-nav">
