--- a/profile.html
+++ b/profile.html
@@ -27,7 +27,7 @@
     <main class="profile-container">
         <section class="profile-header">
             <div class="profile-avatar">
-                <img src="images/default-avatar.png" alt="Profile Picture">
+                <img src="images/Passport Pic.jpeg" alt="Profile Picture">
                 <button id="changeAvatar">Change Photo</button>
             </div>
             <div class="profile-info">
