--- a/index.html
+++ b/index.html
@@ -214,18 +214,20 @@
                     </div>
                     <div class="card-body">
                         <div class="weather-info">
-                            <div class="weather-icon">
+                            <div class="weather-icon" id="weather-icon">
                                 <i class="fas fa-sun"></i>
                             </div>
+
                             <div class="weather-details">
-                                <div class="weather-temp">28°C</div>
-                                <div class="weather-desc">Partly Cloudy</div>
-                                <div class="weather-forecast">Good for harvesting</div>
+                                <div class="weather-temp" id="weather-temp">--°C</div>
+                                <div class="weather-desc" id="weather-desc">Loading...</div>
+                                <div class="weather-forecast" id="weather-forecast">Checking conditions...</div>
                             </div>
                         </div>
-                        <div class="weather-alert">
+
+                        <div class="weather-alert" id="weather-alert">
                             <i class="fas fa-exclamation-triangle"></i>
-                            <span>No weather alerts in your area</span>
+                            <span id="alert-text">No weather alerts</span>
                         </div>
                     </div>
                 </div>
